# MasterHttpRelayVPN-RUST

./: Cargo.toml  README.md  config.google-only.example.json
.github/scripts/: telegram_publish_files.py  telegram_release_notify.py
.github/workflows/: release.yml  telegram-publish-files.yml
android/app/: build.gradle.kts
android/app/src/main/java/com/therealaleph/mhrv/: CaInstall.kt  ConfigStore.kt  MhrvVpnService.kt  Native.kt  VpnState.kt
android/app/src/main/java/com/therealaleph/mhrv/ui/: HomeScreen.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-fa/: strings.xml
assets/apps_script/: CodeFull.gs
docs/: android.md
docs/changelog/: v1.2.0.md  v1.2.1.md  v1.2.14.md  v1.2.7.md  v1.3.0.md  v1.7.10.md  v1.7.2.md  v1.7.7.md
releases/: README.md
src/: android_jni.rs  cache.rs  config.rs  domain_fronter.rs  main.rs  proxy_server.rs  scan_ips.rs  scan_sni.rs  test_cmd.rs  tunnel_client.rs
tunnel-node/src/: main.rs
